# csnake

./: .gitignore  CMakeLists.txt  Makefile  README
src/: client.c  client.h  common.c  common.h  log.c  main.c  messages.c  messages.h  server.c  server.h  snake.c  snake.h  socket.c  socket.h
